@@ -1,5 +1,6 @@
 rex (0.3.99.3) unstable; urgency=low
   * Build dependencies between tasks
+  * Added sysctl command
 
  -- Jan Gehring <jan.gehring@gmail.com>  Fri, 15 Apr 2011 23:40:00 +0200
 
